# hchess

./: .gitignore  README.md  bench.sh  bench.timings.log.txt  biographical.sh  bugs  cabal.config  cabal.project.local  cabalinstall.nix  eventlog.sh  flake.nix  fourmolu.yaml  game.pgn  ghcidgui.sh  ghcidtest.sh  ghcidw  hchess-exe.aux  hchess-exe.hp  hchess-exe.prof  hchess-exe.ps  hchess-profiled.eventlog.html  hchess-profiled.html  hchess-profiled.prof.html  hchess.cabal  hchess.hp  hchess.mate.bug.txt  hchess.prof  heap.sh  hie.yaml  ideas.txt  movebug.txt  nixpkgs.nix  package.yaml  prof.sh  profile.sh  profiteur.sh  release.nix  result  retainers.sh  shell.nix  (+3 more)
app/: Main.hs  Printer.hs
bench/: BenchMain.hs  Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.0.2/: hchess-0.1.0.0-inplace.conf  package.cache
gui/: Main.hs
performance/: Main.hs
profiled/: Main.hs
src/: AI.hs  AppContext.hs  Board.hs  Bunch.hs  Cache.hs  Chess.hs  Evaluation.hs  FastAI.hs  GUI.hs  GameLoop.hs  HumanPGN.hs  Move.hs  PGN.hs  Position.hs  Position2.hs  Printer.hs  Style.hs  Tester.hs  Tree.hs
test/: AISpec.hs  CacheSpec.hs  Main.hs  MoveSpec.hs  PGNSpec.hs  Spec.hs
