name:                hchess
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/mariatsji/hchess
license:             BSD3
license-file:        LICENSE
author:              Sjur Millidahl
maintainer:          sjur.millidahl@gmail.com
copyright:           2017 Sjur Millidahl
category:            App
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Chess
                      ,Printer
                      ,Evaluation
                      ,Move
                      ,AI
  build-depends:       base >= 4.7 && < 5
                      ,utf8-string ==1.0.1.1
                      ,bytestring
                      ,containers
                      ,regex-tdfa
  default-language:    Haskell2010

executable hchess-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hchess
  default-language:    Haskell2010

test-suite hchess-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             MoveSpec.hs
  build-depends:       base
                     , QuickCheck >= 2.9.2
                     , hspec >= 2.4.4
                     , containers
                     , hchess
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite hchess-ai-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             AISpec.hs
  build-depends:       base
                     , QuickCheck >= 2.9.2
                     , hspec >= 2.4.4
                     , hchess
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hchess
