name:                hchess
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/mariatsji/hchess
license:             BSD3
license-file:        LICENSE
author:              Sjur Millidahl
maintainer:          sjur.millidahl@gmail.com
copyright:           2017 Sjur Millidahl
category:            App
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Chess
                      ,Printer
                      ,Evaluation
                      ,Move
                      ,AI
  build-depends:       base >= 4.7 && < 5
                      ,utf8-string
                      ,bytestring
                      ,containers
                      ,regex-tdfa
                      ,vector
                      ,parallel
                      ,deepseq
                      ,conduit
  default-language:    Haskell2010

executable hchess
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , hchess
                     , deepseq
  default-language:    Haskell2010

executable hchess-bench-exe
  hs-source-dirs:      bench
  main-is:             BenchMain.hs
  -- other-modules:
  build-depends:       base
                     , hchess
                     , criterion
  default-language: Haskell2010

benchmark hchess-bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             BenchMain.hs
  -- other-modules:
  build-depends:       base
                     , hchess
                     , criterion
  default-language: Haskell2010

test-suite hchess-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base
                     , QuickCheck
                     , hspec
                     , containers
                     , hchess
  default-language:    Haskell2010
  other-modules:       AISpec
                    ,  MoveSpec
  

source-repository head
  type:     git
  location: https://github.com/githubuser/hchess
